--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   },
   "dependencies": {
     "@ai-sdk/anthropic": "^2.0.23",
+    "@ai-sdk/groq": "^2.0.22",
+    "@ai-sdk/openai": "^2.0.42",
     "@convex-dev/auth": "^0.0.80",
     "ai": "^5.0.60",
     "clsx": "^2.1.1",
