Update dependencies and integrate Google model for invoice analysis. Added `@ai-sdk/google` to package.json and modified `askLLM` function to utilize Google's Gemini model, enhancing the capabilities of the invoice analysis process. Removed success toast messages in InvoiceManager for cleaner user feedback.

--- a/package.json
+++ b/package.json
@@ -12,12 +12,15 @@
   },
   "dependencies": {
     "@ai-sdk/anthropic": "^2.0.23",
+    "@ai-sdk/google": "^2.0.17",
     "@ai-sdk/groq": "^2.0.22",
     "@ai-sdk/openai": "^2.0.42",
     "@convex-dev/auth": "^0.0.80",
     "ai": "^5.0.60",
     "clsx": "^2.1.1",
     "convex": "^1.24.2",
+    "install": "^0.13.0",
+    "npm": "^11.6.1",
     "openai": "^6.1.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
