--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "next-themes": "^0.4.6",
     "npm": "^11.6.1",
     "openai": "^6.1.0",
+    "pdf-parse": "^2.1.7",
     "react": "^19.0.0",
     "react-day-picker": "^9.11.0",
     "react-dom": "^19.0.0",
